# multica-declarative

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  flake.nix  go.mod  pyproject.toml
.github/generated-update/: part00  part01  part02  part03  part04  part05  part06
.github/workflows/: apply-generated-update.yml  ci.yml
cmd/multica-declarative/: main.go
docs/: managed-resources.md
examples/basic/: multica.yaml
examples/basic/agents/unity-developer/: AGENT.md  agent.yaml
examples/basic/skills/unity-development/: SKILL.md
examples/basic/skills/unity-development/references/: testing.md
internal/app/: app.go  app_test.go
internal/backend/: backend.go  cli.go  cli_test.go
internal/config/: extended_test.go  loader.go  loader_test.go
internal/exporter/: exporter.go  exporter_test.go  normalize.go  write.go
internal/model/: model.go
internal/reconcile/: reconcile.go  reconcile_test.go
src/multica_declarative/: __init__.py  cli.py  config.py  models.py  multica_cli.py  reconcile.py
tests/: test_cli.py  test_config.py  test_reconcile.py
